# OpenGL-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  prebuild.lua
Engine/: CMakeLists.txt  prebuild.lua
Engine/src/: epch.h
Engine/src/Engine/: Engine.h
Engine/src/Engine/Core/: Application.cpp  Application.h  Core.h  Entrypoint.h  KeyCodes.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  Window.cpp  Window.h
Engine/src/Engine/Core/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/Engine/Core/Renderer/: Buffers.cpp  Buffers.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
Sandbox/: CMakeLists.txt  prebuild.lua
Sandbox/src/: SandboxApp.cpp
resources/shaders/: default.frag  default.vert
