set(SRCS
    src/Engine/Core/Application.cpp
    src/Engine/Core/Renderer/Shader.cpp
    src/Engine/Core/Renderer/Buffers.cpp
    src/Engine/Core/Renderer/VertexArray.cpp
    src/Engine/Core/Renderer/Renderer.cpp
    src/Engine/Engine.h
    src/Engine/Core/Renderer/Buffers.h
    src/Engine/Core/Renderer/Renderer.h
    src/Engine/Core/Renderer/VertexArray.h
    src/Engine/Core/Renderer/Shader.h
    src/Engine/Core/Application.h
    src/Engine/Core/Entrypoint.h
    vendor/glm/glm/detail/glm.cpp
    vendor/glm/glm/common.hpp
    vendor/glm/glm/mat4x4.hpp
    vendor/glm/glm/vec3.hpp
    vendor/glm/glm/mat3x3.hpp
    vendor/glm/glm/integer.hpp
    vendor/glm/glm/mat3x2.hpp
    vendor/glm/glm/mat3x4.hpp
    vendor/glm/glm/geometric.hpp
    vendor/glm/glm/mat2x2.hpp
    vendor/glm/glm/vec2.hpp
    vendor/glm/glm/ext/matrix_relational.hpp
    vendor/glm/glm/ext/vector_int3.hpp
    vendor/glm/glm/ext/matrix_double2x3_precision.hpp
    vendor/glm/glm/ext/scalar_common.hpp
    vendor/glm/glm/ext/vector_common.hpp
    vendor/glm/glm/ext/matrix_uint3x2.hpp
    vendor/glm/glm/ext/scalar_constants.hpp
    vendor/glm/glm/ext/vector_double4.hpp
    vendor/glm/glm/ext/matrix_double2x2.hpp
    vendor/glm/glm/ext/vector_packing.hpp
    vendor/glm/glm/ext/matrix_int3x4_sized.hpp
    vendor/glm/glm/ext/matrix_int3x3_sized.hpp
    vendor/glm/glm/ext/vector_uint4.hpp
    vendor/glm/glm/ext/vector_bool2_precision.hpp
    vendor/glm/glm/ext/matrix_int4x3_sized.hpp
    vendor/glm/glm/ext/matrix_float2x2.hpp
    vendor/glm/glm/ext/matrix_float3x2_precision.hpp
    vendor/glm/glm/ext/matrix_float3x4.hpp
    vendor/glm/glm/ext/matrix_int4x2_sized.hpp
    vendor/glm/glm/ext/matrix_float2x3_precision.hpp
    vendor/glm/glm/ext/matrix_uint2x3.hpp
    vendor/glm/glm/ext/vector_int1.hpp
    vendor/glm/glm/ext/matrix_double4x3.hpp
    vendor/glm/glm/ext/vector_bool1_precision.hpp
    vendor/glm/glm/ext/vector_float3.hpp
    vendor/glm/glm/ext/matrix_float2x2_precision.hpp
    vendor/glm/glm/ext/vector_bool4.hpp
    vendor/glm/glm/ext/matrix_uint3x4_sized.hpp
    vendor/glm/glm/ext/vector_float2_precision.hpp
    vendor/glm/glm/ext/matrix_float4x3.hpp
    vendor/glm/glm/ext/vector_integer.hpp
    vendor/glm/glm/ext/matrix_double4x2.hpp
    vendor/glm/glm/ext/quaternion_relational.hpp
    vendor/glm/glm/ext/matrix_int2x2.hpp
    vendor/glm/glm/ext/vector_reciprocal.hpp
    vendor/glm/glm/ext/matrix_float2x4.hpp
    vendor/glm/glm/ext/quaternion_float_precision.hpp
    vendor/glm/glm/ext/vector_uint3.hpp
    vendor/glm/glm/ext/matrix_int3x3.hpp
    vendor/glm/glm/ext/matrix_double3x3_precision.hpp
    vendor/glm/glm/ext/matrix_float2x4_precision.hpp
    vendor/glm/glm/ext/matrix_int2x4_sized.hpp
    vendor/glm/glm/ext/vector_int1_sized.hpp
    vendor/glm/glm/ext/matrix_double2x2_precision.hpp
    vendor/glm/glm/ext/vector_int3_sized.hpp
    vendor/glm/glm/ext/vector_float1.hpp
    vendor/glm/glm/ext/matrix_double3x4_precision.hpp
    vendor/glm/glm/ext/vector_float2.hpp
    vendor/glm/glm/ext/matrix_uint3x3_sized.hpp
    vendor/glm/glm/ext/matrix_float3x3.hpp
    vendor/glm/glm/ext/matrix_int4x4.hpp
    vendor/glm/glm/ext/vector_int2.hpp
    vendor/glm/glm/ext/matrix_uint2x3_sized.hpp
    vendor/glm/glm/ext/matrix_double2x4_precision.hpp
    vendor/glm/glm/ext/vector_bool3.hpp
    vendor/glm/glm/ext/vector_bool4_precision.hpp
    vendor/glm/glm/ext/matrix_int2x2_sized.hpp
    vendor/glm/glm/ext/quaternion_trigonometric.hpp
    vendor/glm/glm/ext/scalar_int_sized.hpp
    vendor/glm/glm/ext/scalar_ulp.hpp
    vendor/glm/glm/ext/vector_double2.hpp
    vendor/glm/glm/ext/vector_uint2.hpp
    vendor/glm/glm/ext/matrix_double2x4.hpp
    vendor/glm/glm/ext/quaternion_common.hpp
    vendor/glm/glm/ext/matrix_uint3x4.hpp
    vendor/glm/glm/ext/matrix_double4x4.hpp
    vendor/glm/glm/ext/matrix_uint4x4.hpp
    vendor/glm/glm/ext/matrix_double3x3.hpp
    vendor/glm/glm/ext/matrix_int4x2.hpp
    vendor/glm/glm/ext/quaternion_float.hpp
    vendor/glm/glm/ext/_matrix_vectorize.hpp
    vendor/glm/glm/ext/vector_double1.hpp
    vendor/glm/glm/ext/vector_uint1.hpp
    vendor/glm/glm/ext/quaternion_transform.hpp
    vendor/glm/glm/ext/matrix_clip_space.hpp
    vendor/glm/glm/ext/matrix_uint2x4_sized.hpp
    vendor/glm/glm/ext/quaternion_exponential.hpp
    vendor/glm/glm/ext/vector_double3.hpp
    vendor/glm/glm/ext/matrix_uint4x2.hpp
    vendor/glm/glm/ext/vector_float4.hpp
    vendor/glm/glm/ext/vector_double3_precision.hpp
    vendor/glm/glm/ext/matrix_uint3x2_sized.hpp
    vendor/glm/glm/ext/vector_bool3_precision.hpp
    vendor/glm/glm/ext/matrix_uint2x4.hpp
    vendor/glm/glm/ext/matrix_int2x3_sized.hpp
    vendor/glm/glm/ext/scalar_reciprocal.hpp
    vendor/glm/glm/ext/matrix_float4x2.hpp
    vendor/glm/glm/ext/matrix_double3x2_precision.hpp
    vendor/glm/glm/ext/vector_uint4_sized.hpp
    vendor/glm/glm/ext/matrix_double4x4_precision.hpp
    vendor/glm/glm/ext/matrix_int2x3.hpp
    vendor/glm/glm/ext/matrix_int3x2.hpp
    vendor/glm/glm/ext/scalar_relational.hpp
    vendor/glm/glm/ext/matrix_uint2x2.hpp
    vendor/glm/glm/ext/matrix_float3x3_precision.hpp
    vendor/glm/glm/ext/matrix_double3x4.hpp
    vendor/glm/glm/ext/vector_int4_sized.hpp
    vendor/glm/glm/ext/vector_bool1.hpp
    vendor/glm/glm/ext/matrix_integer.hpp
    vendor/glm/glm/ext/matrix_projection.hpp
    vendor/glm/glm/ext/vector_ulp.hpp
    vendor/glm/glm/ext/matrix_common.hpp
    vendor/glm/glm/ext/matrix_uint3x3.hpp
    vendor/glm/glm/ext/vector_float3_precision.hpp
    vendor/glm/glm/ext/matrix_uint4x2_sized.hpp
    vendor/glm/glm/ext/vector_relational.hpp
    vendor/glm/glm/ext/matrix_uint4x4_sized.hpp
    vendor/glm/glm/ext/vector_double4_precision.hpp
    vendor/glm/glm/ext/matrix_float3x2.hpp
    vendor/glm/glm/ext/matrix_float3x4_precision.hpp
    vendor/glm/glm/ext/vector_int2_sized.hpp
    vendor/glm/glm/ext/scalar_packing.hpp
    vendor/glm/glm/ext/matrix_float4x2_precision.hpp
    vendor/glm/glm/ext/vector_double1_precision.hpp
    vendor/glm/glm/ext/vector_uint3_sized.hpp
    vendor/glm/glm/ext/vector_float1_precision.hpp
    vendor/glm/glm/ext/matrix_double4x2_precision.hpp
    vendor/glm/glm/ext/vector_double2_precision.hpp
    vendor/glm/glm/ext/matrix_float2x3.hpp
    vendor/glm/glm/ext/matrix_double3x2.hpp
    vendor/glm/glm/ext/matrix_uint4x3.hpp
    vendor/glm/glm/ext/scalar_uint_sized.hpp
    vendor/glm/glm/ext/vector_bool2.hpp
    vendor/glm/glm/ext/matrix_int4x3.hpp
    vendor/glm/glm/ext/matrix_transform.hpp
    vendor/glm/glm/ext/quaternion_geometric.hpp
    vendor/glm/glm/ext/vector_uint2_sized.hpp
    vendor/glm/glm/ext/vector_float4_precision.hpp
    vendor/glm/glm/ext/matrix_int3x4.hpp
    vendor/glm/glm/ext/matrix_int3x2_sized.hpp
    vendor/glm/glm/ext/matrix_double2x3.hpp
    vendor/glm/glm/ext/matrix_double4x3_precision.hpp
    vendor/glm/glm/ext/matrix_uint2x2_sized.hpp
    vendor/glm/glm/ext/vector_uint1_sized.hpp
    vendor/glm/glm/ext/quaternion_double_precision.hpp
    vendor/glm/glm/ext/matrix_uint4x3_sized.hpp
    vendor/glm/glm/ext/matrix_int4x4_sized.hpp
    vendor/glm/glm/ext/scalar_integer.hpp
    vendor/glm/glm/ext/matrix_float4x4.hpp
    vendor/glm/glm/ext/matrix_float4x4_precision.hpp
    vendor/glm/glm/ext/quaternion_double.hpp
    vendor/glm/glm/ext/matrix_float4x3_precision.hpp
    vendor/glm/glm/ext/matrix_int2x4.hpp
    vendor/glm/glm/ext/vector_int4.hpp
    vendor/glm/glm/gtx/string_cast.hpp
    vendor/glm/glm/gtx/common.hpp
    vendor/glm/glm/gtx/extended_min_max.hpp
    vendor/glm/glm/gtx/extend.hpp
    vendor/glm/glm/gtx/std_based_type.hpp
    vendor/glm/glm/gtx/functions.hpp
    vendor/glm/glm/gtx/transform2.hpp
    vendor/glm/glm/gtx/pca.hpp
    vendor/glm/glm/gtx/color_space_YCoCg.hpp
    vendor/glm/glm/gtx/rotate_normalized_axis.hpp
    vendor/glm/glm/gtx/integer.hpp
    vendor/glm/glm/gtx/transform.hpp
    vendor/glm/glm/gtx/wrap.hpp
    vendor/glm/glm/gtx/matrix_decompose.hpp
    vendor/glm/glm/gtx/vector_query.hpp
    vendor/glm/glm/gtx/matrix_cross_product.hpp
    vendor/glm/glm/gtx/hash.hpp
    vendor/glm/glm/gtx/range.hpp
    vendor/glm/glm/gtx/matrix_operation.hpp
    vendor/glm/glm/gtx/perpendicular.hpp
    vendor/glm/glm/gtx/associated_min_max.hpp
    vendor/glm/glm/gtx/type_aligned.hpp
    vendor/glm/glm/gtx/matrix_interpolation.hpp
    vendor/glm/glm/gtx/handed_coordinate_space.hpp
    vendor/glm/glm/gtx/vec_swizzle.hpp
    vendor/glm/glm/gtx/easing.hpp
    vendor/glm/glm/gtx/color_space.hpp
    vendor/glm/glm/gtx/texture.hpp
    vendor/glm/glm/gtx/closest_point.hpp
    vendor/glm/glm/gtx/quaternion.hpp
    vendor/glm/glm/gtx/matrix_query.hpp
    vendor/glm/glm/gtx/intersect.hpp
    vendor/glm/glm/gtx/spline.hpp
    vendor/glm/glm/gtx/orthonormalize.hpp
    vendor/glm/glm/gtx/type_trait.hpp
    vendor/glm/glm/gtx/fast_exponential.hpp
    vendor/glm/glm/gtx/exterior_product.hpp
    vendor/glm/glm/gtx/color_encoding.hpp
    vendor/glm/glm/gtx/optimum_pow.hpp
    vendor/glm/glm/gtx/vector_angle.hpp
    vendor/glm/glm/gtx/polar_coordinates.hpp
    vendor/glm/glm/gtx/mixed_product.hpp
    vendor/glm/glm/gtx/compatibility.hpp
    vendor/glm/glm/gtx/scalar_relational.hpp
    vendor/glm/glm/gtx/dual_quaternion.hpp
    vendor/glm/glm/gtx/gradient_paint.hpp
    vendor/glm/glm/gtx/norm.hpp
    vendor/glm/glm/gtx/number_precision.hpp
    vendor/glm/glm/gtx/fast_square_root.hpp
    vendor/glm/glm/gtx/normalize_dot.hpp
    vendor/glm/glm/gtx/matrix_transform_2d.hpp
    vendor/glm/glm/gtx/log_base.hpp
    vendor/glm/glm/gtx/scalar_multiplication.hpp
    vendor/glm/glm/gtx/fast_trigonometry.hpp
    vendor/glm/glm/gtx/raw_data.hpp
    vendor/glm/glm/gtx/matrix_factorisation.hpp
    vendor/glm/glm/gtx/component_wise.hpp
    vendor/glm/glm/gtx/normal.hpp
    vendor/glm/glm/gtx/matrix_major_storage.hpp
    vendor/glm/glm/gtx/projection.hpp
    vendor/glm/glm/gtx/io.hpp
    vendor/glm/glm/gtx/rotate_vector.hpp
    vendor/glm/glm/gtx/euler_angles.hpp
    vendor/glm/glm/gtx/bit.hpp
    vendor/glm/glm/gtc/matrix_inverse.hpp
    vendor/glm/glm/gtc/integer.hpp
    vendor/glm/glm/gtc/random.hpp
    vendor/glm/glm/gtc/ulp.hpp
    vendor/glm/glm/gtc/type_aligned.hpp
    vendor/glm/glm/gtc/round.hpp
    vendor/glm/glm/gtc/type_ptr.hpp
    vendor/glm/glm/gtc/color_space.hpp
    vendor/glm/glm/gtc/packing.hpp
    vendor/glm/glm/gtc/type_precision.hpp
    vendor/glm/glm/gtc/quaternion.hpp
    vendor/glm/glm/gtc/matrix_access.hpp
    vendor/glm/glm/gtc/constants.hpp
    vendor/glm/glm/gtc/reciprocal.hpp
    vendor/glm/glm/gtc/matrix_integer.hpp
    vendor/glm/glm/gtc/noise.hpp
    vendor/glm/glm/gtc/bitfield.hpp
    vendor/glm/glm/gtc/vec1.hpp
    vendor/glm/glm/gtc/matrix_transform.hpp
    vendor/glm/glm/gtc/epsilon.hpp
    vendor/glm/glm/glm.hpp
    vendor/glm/glm/packing.hpp
    vendor/glm/glm/mat4x2.hpp
    vendor/glm/glm/trigonometric.hpp
    vendor/glm/glm/fwd.hpp
    vendor/glm/glm/vector_relational.hpp
    vendor/glm/glm/exponential.hpp
    vendor/glm/glm/ext.hpp
    vendor/glm/glm/mat4x3.hpp
    vendor/glm/glm/matrix.hpp
    vendor/glm/glm/vec4.hpp
    vendor/glm/glm/mat2x3.hpp
    vendor/glm/glm/detail/compute_vector_decl.hpp
    vendor/glm/glm/detail/_noise.hpp
    vendor/glm/glm/detail/type_mat3x3.hpp
    vendor/glm/glm/detail/type_mat2x2.hpp
    vendor/glm/glm/detail/compute_common.hpp
    vendor/glm/glm/detail/type_mat4x3.hpp
    vendor/glm/glm/detail/compute_vector_relational.hpp
    vendor/glm/glm/detail/qualifier.hpp
    vendor/glm/glm/detail/type_vec3.hpp
    vendor/glm/glm/detail/type_mat4x4.hpp
    vendor/glm/glm/detail/_features.hpp
    vendor/glm/glm/detail/_swizzle.hpp
    vendor/glm/glm/detail/type_float.hpp
    vendor/glm/glm/detail/type_mat4x2.hpp
    vendor/glm/glm/detail/type_vec1.hpp
    vendor/glm/glm/detail/type_mat2x3.hpp
    vendor/glm/glm/detail/type_half.hpp
    vendor/glm/glm/detail/_fixes.hpp
    vendor/glm/glm/detail/type_vec4.hpp
    vendor/glm/glm/detail/type_quat.hpp
    vendor/glm/glm/detail/type_mat3x2.hpp
    vendor/glm/glm/detail/_swizzle_func.hpp
    vendor/glm/glm/detail/type_vec2.hpp
    vendor/glm/glm/detail/type_mat2x4.hpp
    vendor/glm/glm/detail/setup.hpp
    vendor/glm/glm/detail/type_mat3x4.hpp
    vendor/glm/glm/detail/_vectorize.hpp
    vendor/glm/glm/mat2x4.hpp
)
add_library(Engine STATIC ${SRCS})
set_property(TARGET Engine PROPERTY CXX_STANDARD 20)

target_include_directories(Engine PRIVATE
    src
    vendor/glm
    vendor/glfw/include
    vendor/Glad/include
)

target_link_libraries(Engine
    GL
    Glad
    glfw
)

target_compile_definitions(Engine PUBLIC GDEFINES)
